ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bus.softbd.xyz
    http:
      paths:
      - backend:
          serviceName: demo-service
          servicePort: 8080
